Fixed python website double scroller and improve UX (#18845)
* make python site header scroll aware and avoid double scroller

* add compiled assets

* adjust python site second header height

* add new line

* set focus to main content on DOM load
# Conflicts:
#	docs/python_docs/themes/mx-theme/mxtheme/static/sphinx_materialdesign_theme.css
#	docs/python_docs/themes/mx-theme/mxtheme/static/sphinx_materialdesign_theme.css.map
#	docs/python_docs/themes/mx-theme/mxtheme/static/sphinx_materialdesign_theme.js
#	docs/python_docs/themes/mx-theme/mxtheme/static/sphinx_materialdesign_theme.js.map
#	docs/python_docs/themes/mx-theme/src/scss/_root.scss

--- a/docs/python_docs/_static/mxnet.css
+++ b/docs/python_docs/_static/mxnet.css
@@ -53,7 +53,7 @@
 }
 
 .mdl-layout__header-row {
-    height: 84px !important;
+    height: 80px !important;
 }
 
 .mdl-shadow--2dp {
@@ -203,4 +203,8 @@ p {
     float: right;
     margin: 4px;
     cursor: pointer;
+}
+
+.scrollUp {
+    transform: translateY(-80px);
 }
